tests/compile_fail/round_on_l_conn.stderr
error[E0277]: the trait bound `Conn<i32, i32>: Triple<_, _>` is not satisfied
  --> tests/compile_fail/round_on_l_conn.rs:11:24
   |
11 |     let _: i32 = round(&L_CONN, 0_i32);
   |                  ----- ^^^^^^^ the trait `ViewL<_, _>` is not implemented for `Conn<i32, i32>`
   |                  |
   |                  required by a bound introduced by this call
   |
   = help: the following other types implement trait `ViewL<A, B>`:
             `DURNSECS` implements `ViewL<time::duration::Duration, Extended<i64>>`
             `F032DURN` implements `ViewL<ExtendedFloat<f32>, Extended<time::duration::Duration>>`
             `F032STDR` implements `ViewL<ExtendedFloat<f32>, Extended<Duration>>`
             `F064DURN` implements `ViewL<ExtendedFloat<f64>, Extended<time::duration::Duration>>`
             `F064F032` implements `ViewL<ExtendedFloat<f64>, ExtendedFloat<f32>>`
             `F064STDR` implements `ViewL<ExtendedFloat<f64>, Extended<Duration>>`
             `I008I016` implements `ViewL<Extended<i8>, i16>`
             `I008I032` implements `ViewL<Extended<i8>, i32>`
           and $N others
   = note: required for `Conn<i32, i32>` to implement `Triple<_, _>`
note: required by a bound in `connections::round`
  --> src/conn.rs
   |
   | pub fn round<T, A, B>(t: &T, x: A) -> B
   |        ----- required by a bound in this function
   | where
   |     T: Triple<A, B>,
   |        ^^^^^^^^^^^^ required by this bound in `round`

error[E0277]: the trait bound `Conn<i32, i32>: Triple<_, _>` is not satisfied
  --> tests/compile_fail/round_on_l_conn.rs:11:24
   |
11 |     let _: i32 = round(&L_CONN, 0_i32);
   |                  ----- ^^^^^^^ the trait `ViewR<_, _>` is not implemented for `Conn<i32, i32>`
   |                  |
   |                  required by a bound introduced by this call
   |
   = help: the following other types implement trait `ViewR<A, B>`:
             `DURNSECS` implements `ViewR<time::duration::Duration, Extended<i64>>`
             `F032DURN` implements `ViewR<ExtendedFloat<f32>, Extended<time::duration::Duration>>`
             `F032STDR` implements `ViewR<ExtendedFloat<f32>, Extended<Duration>>`
             `F064DURN` implements `ViewR<ExtendedFloat<f64>, Extended<time::duration::Duration>>`
             `F064F032` implements `ViewR<ExtendedFloat<f64>, ExtendedFloat<f32>>`
             `F064STDR` implements `ViewR<ExtendedFloat<f64>, Extended<Duration>>`
             `I008I016` implements `ViewR<Extended<i8>, i16>`
             `I008I032` implements `ViewR<Extended<i8>, i32>`
           and $N others
   = note: required for `Conn<i32, i32>` to implement `Triple<_, _>`
note: required by a bound in `connections::round`
  --> src/conn.rs
   |
   | pub fn round<T, A, B>(t: &T, x: A) -> B
   |        ----- required by a bound in this function
   | where
   |     T: Triple<A, B>,
   |        ^^^^^^^^^^^^ required by this bound in `round`
